hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__if_mismatch_branch_types.snap
---
source: hir/src/passes/resolver.rs
expression: resolved_hir
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Expected type boolean, got number",
                span: 1:24; [23, 30],
                level: Error,
            },
        ],
        inputs: (),
    },
)
